--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "mdbreact": "^4.27.0",
+    "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-js-pagination": "^3.0.3",
+    "react-moment": "^0.9.7",
     "react-router-dom": "^5.2.0",
     "turbolinks": "^5.2.0"
   },
